--- a/index.html
+++ b/index.html
@@ -2129,7 +2129,7 @@
             <div class="gold-bar"></div>
             <div class="gold-bar"></div>
         </div>
-        <div class="preloader-text">AURION FINANCE</div>
+        <div class="preloader-text">Aurion Club</div>
     </div>
 
     <!-- Header -->
@@ -2137,7 +2137,7 @@
         <nav class="nav container">
             <div class="nav__logo">
                 <img src="https://files.catbox.moe/3o41t1.png" alt="Aurion Finance" class="logo">
-                <div class="logo__text">AURION FINANCE</div>
+                <div class="logo__text">Aurion Club</div>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -2186,16 +2186,14 @@
             <div class="hero__container container">
                 <div class="hero__content">
                     <div class="hero__badge">
-                        <span class="badge">PREMIUM INVESTMENT PLATFORM</span>
+                        <span class="badge">The Next Generation in the DeFi World</span>
                     </div>
                     <h1 class="hero__title">
-                        Secure <span class="gradient-text">USDT Investments</span> 
-                        with Premium Returns
+                        Aurion <span class="gradient-text">Club </span> 
+                        – Where Blockchain Meets Sustainable Growth
                     </h1>
                     <p class="hero__description">
-                        Aurion Finance offers exclusive investment opportunities with 
-                        guaranteed daily ROI, multi-level referral system, and secure 
-                        smart contract technology backed by comprehensive audits.
+                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses — designed to empower investors with security, clarity, and passive income stability
                     </p>
                     <div class="hero__buttons">
                         <button class="btn btn--primary" data-section="invest">
@@ -2214,7 +2212,7 @@
                         </div>
                         <div class="stat">
                             <div class="stat__value" id="totalUsers">0</div>
-                            <div class="stat__label">Premium Investors</div>
+                            <div class="stat__label">Total Investors</div>
                         </div>
                         <div class="stat">
                             <div class="stat__value" id="totalPaid">$0</div>
@@ -2233,11 +2231,11 @@
                         </div>
                         <div class="card__content">
                             <div class="stat-item">
-                                <span>Contract Balance</span>
+                                <span>Total Value Locked</span>
                                 <span class="value" id="contractBalance">0 USDT</span>
                             </div>
                             <div class="stat-item">
-                                <span>Daily ROI Rate</span>
+                                <span>Daily ROI</span>
                                 <span class="value">1% - 2%</span>
                             </div>
                             <div class="stat-item">
@@ -2303,7 +2301,7 @@
                         </div>
                         <div class="stat-info">
                             <div class="stat-value" id="referralBonus">0 USDT</div>
-                            <div class="stat-label">Referral Bonus</div>
+                            <div class="stat-label">Referral Earnings</div>
                         </div>
                     </div>
                 </div>
@@ -2311,8 +2309,8 @@
                 <!-- Action Buttons -->
                 <div class="action-buttons" id="actionButtons" style="display: none;">
                     <button class="btn btn--primary" data-section="invest">
-                        <i class="fas fa-plus"></i>
-                        New Investment
+                        <i class="fas fa-rocket"></i>
+                        Start Investing
                     </button>
                     <button class="btn btn--outline" id="withdrawEarnings">
                         <i class="fas fa-download"></i>
