--- a/index.html
+++ b/index.html
@@ -2189,7 +2189,7 @@
                         <span class="badge">The Next Generation in the DeFi World</span>
                     </div>
                     <h1 class="hero__title">
-                        Aurion <span class="gradient-text">Club </span> 
+                        <span class="gradient-text">Aurion Club </span> 
                         – Where Blockchain Meets Sustainable Growth
                     </h1>
                     <p class="hero__description">
@@ -2341,7 +2341,7 @@
         <section class="invest-section section" id="invest" style="display: none;">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title">Premium Investment Plans</h2>
+                    <h2 class="section__title">Investment Plans</h2>
                     <p class="section__subtitle">Select from our exclusive investment tiers and start earning premium returns</p>
                 </div>
 
@@ -2396,14 +2396,6 @@
                                 <span>Investment Amount:</span>
                                 <span id="summaryAmount">0 USDT</span>
                             </div>
-                            <div class="summary-item">
-                                <span>Platform Fee (10%):</span>
-                                <span id="summaryFee">0 USDT</span>
-                            </div>
-                            <div class="summary-item total">
-                                <span>Total to Pay:</span>
-                                <span id="summaryTotal">0 USDT</span>
-                            </div>
                         </div>
 
                         <button class="btn btn--primary btn-lg" id="confirmInvestment" style="width: 100%;">
@@ -2420,7 +2412,7 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                         <h2>Investment Successful!</h2>
-                        <p>Your investment has been processed successfully. You can now monitor your earnings in the dashboard.</p>
+                        <p>You can now monitor your earnings in the dashboard</p>
                         <div class="success-actions">
                             <button class="btn btn--primary" data-section="dashboard">
                                 <i class="fas fa-tachometer-alt"></i>
@@ -2440,7 +2432,7 @@
         <section class="referral-section section" id="referral" style="display: none;">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title">Premium Referral Program</h2>
+                    <h2 class="section__title">Referral Program</h2>
                     <p class="section__subtitle">Earn exclusive commissions from 4 levels of your referral network</p>
                 </div>
 
@@ -2472,18 +2464,18 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-icon">
-                            <i class="fas fa-wallet"></i>
+                            <i class="fas fa-gift"></i>
                         </div>
                         <div class="stat-info">
                             <div class="stat-value" id="availableBonus">0 USDT</div>
-                            <div class="stat-label">Available Bonus</div>
+                            <div class="stat-label">Referral Earnings</div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Referral Link Section -->
                 <div class="referral-link-container" id="referralLinkSection" style="display: none;">
-                    <h2>Your Exclusive Referral Link</h2>
+                    <h2>Your Referral Link</h2>
                     <p>Share this link with your network and earn premium commissions from their investments</p>
                     <div class="link-display">
                         <input type="text" id="referralLink" class="link-input" readonly>
@@ -2607,7 +2599,7 @@
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title">Whitepaper</h2>
-                    <p class="section__subtitle">AURION — The Premium Decentralized Smart Contract Investment Ecosystem</p>
+                    <p class="section__subtitle">Aurion Club — Where Blockchain Meets Sustainable Growth</p>
                 </div>
 
                 <div class="whitepaper-container">
@@ -2624,7 +2616,7 @@
                         <div class="whitepaper-chapter">
                             <h3 class="chapter-title"><i class="fas fa-lightbulb"></i> 2. Core Concept</h3>
                             <div class="chapter-content">
-                                <p>Aurion enables investors to stake USDT (ERC20/BEP20) tokens into predefined investment plans with fixed daily ROI percentages.</p>
+                                <p>Aurion enables investors to stake USDT (BEP20) tokens into predefined investment plans with fixed daily ROI percentages.</p>
                                 <p>Each plan offers different profitability levels, durations, and earning caps — allowing users to choose the model that best fits their capital and risk appetite.</p>
                                 <p>The system also rewards community expansion through a multi-level referral program, ensuring continuous ecosystem growth while maintaining on-chain transparency and performance.</p>
                             </div>
@@ -2648,35 +2640,35 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Plan 1</td>
+                                            <td>Starter</td>
                                             <td>$20 – $499</td>
                                             <td>1.0%</td>
                                             <td>150 days</td>
                                             <td>150%</td>
                                         </tr>
                                         <tr>
-                                            <td>Plan 2</td>
+                                            <td>Advanced</td>
                                             <td>$500 – $1,999</td>
                                             <td>1.2%</td>
                                             <td>150 days</td>
                                             <td>180%</td>
                                         </tr>
                                         <tr>
-                                            <td>Plan 3</td>
+                                            <td>Professional</td>
                                             <td>$2,000 – $4,999</td>
                                             <td>1.5%</td>
                                             <td>150 days</td>
                                             <td>225%</td>
                                         </tr>
                                         <tr>
-                                            <td>Plan 4</td>
+                                            <td>Premium</td>
                                             <td>$5,000 – $9,999</td>
                                             <td>1.8%</td>
                                             <td>150 days</td>
                                             <td>270%</td>
                                         </tr>
                                         <tr>
-                                            <td>Plan 5</td>
+                                            <td>VIP</td>
                                             <td>≥ $10,000</td>
                                             <td>2.0%</td>
                                             <td>150 days</td>
@@ -2879,9 +2871,9 @@
                             <h3 class="chapter-title"><i class="fas fa-info-circle"></i> Executive Summary</h3>
                             <div class="chapter-content">
                                 <p>The Aurion Finance smart contract has undergone a comprehensive security audit by our internal security team. The audit focused on identifying potential vulnerabilities, security risks, and code quality issues.</p>
-                                <p><strong>Audit Date:</strong> October 26, 2024</p>
-                                <p><strong>Audit Scope:</strong> Aurion.sol - Main Investment Contract</p>
-                                <p><strong>Contract Address:</strong> <a href="https://bscscan.com/address/0xadb78631123cd4b4686365423b80c344e438b7d6#code" target="_blank" rel="noopener noreferrer">0xaDb...b7d6</a></p>
+                                <p><strong>Audit Date:</strong> October 23, 2025</p>
+                                <p><strong>Audit Scope:</strong> AurionClub.sol</p>
+                                <p><strong>Contract Address:</strong> <a href="https://bscscan.com/address/0xAD81F7819465e3e4201C587c20C4b8E1Bb9920eb#code" target="_blank" rel="noopener noreferrer">0xAD...20eb</a></p>
                             </div>
                         </div>
 
@@ -3027,7 +3019,7 @@
                             <i class="fas fa-chevron-down faq-icon"></i>
                         </div>
                         <div class="faq-answer">
-                            <p>Daily returns are calculated based on your investment amount and the daily ROI rate of your chosen plan. For example, with a 1.5% daily ROI on a 1,000 USDT investment, you would earn 15 USDT per day.</p>
+                            <p>Daily returns are calculated based on your investment amount and the daily ROI rate of your chosen plan. For example, with a 1.2% daily ROI on a 1,000 USDT investment, you would earn 12 USDT per day.</p>
                         </div>
                     </div>
 
@@ -3047,17 +3039,17 @@
                             <i class="fas fa-chevron-down faq-icon"></i>
                         </div>
                         <div class="faq-answer">
-                            <p>Yes, there is a 5% withdrawal fee on earnings. This fee helps maintain the platform and ensure sustainable operations for all investors.</p>
+                            <p>Yes, there is a 5% withdrawal fee to maintain liquidity and balance of the ecosystem.</p>
                         </div>
                     </div>
 
                     <div class="faq-item">
                         <div class="faq-question">
-                            <h3>How secure is Aurion Finance?</h3>
+                            <h3>How secure is Aurion Club?</h3>
                             <i class="fas fa-chevron-down faq-icon"></i>
                         </div>
                         <div class="faq-answer">
-                            <p>Aurion Finance uses audited smart contracts on the Binance Smart Chain. Our contracts have been verified by leading security firms, and we implement multiple security measures to protect user funds.</p>
+                            <p>Aurion Club uses audited smart contracts on the Binance Smart Chain. Our contracts have been verified by leading security firms, and we implement multiple security measures to protect user funds.</p>
                         </div>
                     </div>
 
@@ -3067,7 +3059,7 @@
                             <i class="fas fa-chevron-down faq-icon"></i>
                         </div>
                         <div class="faq-answer">
-                            <p>If you don't meet the minimum direct referral requirements for Levels 2-4, the corresponding referral bonuses become expired and are added to the contract's expired bonus pool. These funds are used for platform maintenance and liquidity.</p>
+                            <p>If you don't meet the minimum direct referral requirements for Levels 2-4, the corresponding referral bonus will expire and be added to the expired contract bonus pool. These funds are used for platform maintenance, events, and liquidity.</p>
                         </div>
                     </div>
 
@@ -3092,20 +3084,20 @@
                 <div class="footer__brand">
                     <div class="footer__logo">
                         <img src="https://files.catbox.moe/3o41t1.png" alt="Aurion Finance">
-                        <span>AURION FINANCE</span>
+                        <span>Aurion Club</span>
                     </div>
                     <p class="footer__description">
-                        Premium USDT investment platform with secure smart contract technology and guaranteed returns.
+                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses — designed to empower investors with security, clarity, and passive income stability
                     </p>
                     <div class="footer__social">
-                        <a href="#" class="social__link">
+                        <a href="https://t.me/AurionClub" class="social__link">
                             <i class="fab fa-telegram"></i>
                         </a>
-                        <a href="#" class="social__link">
-                            <i class="fab fa-twitter"></i>
+                        <a href="https://bscscan.com/address/0xAD81F7819465e3e4201C587c20C4b8E1Bb9920eb#code" class="social__link">
+                            <i class="fas fa-file-contract"></i>
                         </a>
-                        <a href="#" class="social__link">
-                            <i class="fab fa-github"></i>
+                        <a href="https://t.me/AurionClubSupport" class="social__link">
+                            <i class="fas fa-headset"></i>
                         </a>
                     </div>
                 </div>
@@ -3125,14 +3117,13 @@
                     </div>
                     <div class="footer__column">
                         <h4>Support</h4>
-                        <a href="#">Contact Us</a>
-                        <a href="#">Help Center</a>
-                        <a href="#">Community</a>
+                        <a href="https://t.me/AurionClubSupport">Contact Us</a>
+                        <a href="https://t.me/AurionClub">Community</a>
                     </div>
                 </div>
             </div>
             <div class="footer__bottom">
-                <p>&copy; 2024 Aurion Finance. All rights reserved.</p>
+                <p>&copy; 2025 Aurion Club</p>
             </div>
         </div>
     </footer>
@@ -3143,7 +3134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script>
         // Contract Configuration - REAL CONTRACT
-        const CONTRACT_ADDRESS = '0xaDb78631123CD4B4686365423B80C344E438b7d6';
+        const CONTRACT_ADDRESS = '0xAD81F7819465e3e4201C587c20C4b8E1Bb9920eb';
         
         // USDT Token Address on BSC
         const USDT_ADDRESS = '0x55d398326f99059fF775485246999027B3197955';
@@ -3245,7 +3236,7 @@
                     showNotification('Error connecting to blockchain', 'error');
                 }
             } else {
-                showNotification('Please install MetaMask to use this dApp', 'error');
+                showNotification('Please install MetaMask!', 'error');
             }
         }
 
@@ -3473,7 +3464,7 @@
         }
 
         function selectPlan(planId) {
-            if (!userAccount) return showNotification('Please connect your wallet first', 'error');
+            if (!userAccount) return showNotification('Please connect your wallet first!', 'error');
             const plansData = [
                 { id: 0, name: 'Starter Plan', roi: '1% Daily', min: 20, max: 499 },
                 { id: 1, name: 'Advanced Plan', roi: '1.2% Daily', min: 500, max: 1999 },
@@ -3540,7 +3531,7 @@
                 }
                 showNotification('Depositing...', 'info');
                 await contract.methods.deposit(amountWei, selectedPlan.id, refAddr).send({ from: userAccount });
-                showNotification('Investment successful! 🎉', 'success');
+                showNotification('Investment successful!', 'success');
                 investmentSuccessPopup.classList.add('active');
                 await loadUserData();
             } catch (error) {
@@ -3578,7 +3569,7 @@
 
         function shareOnSocial(platform) {
             const link = document.getElementById('referralLink').value;
-            const text = encodeURIComponent('Join Aurion Finance and start earning premium returns with secure USDT investments!');
+            const text = encodeURIComponent('Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses — designed to empower investors with security, clarity, and passive income stability!');
             const urls = {
                 telegram: `https://t.me/share/url?url=${link}&text=${text}`,
                 twitter: `https://twitter.com/intent/tweet?url=${link}&text=${text}`,
