--- a/index.html
+++ b/index.html
@@ -2129,15 +2129,15 @@
             <div class="gold-bar"></div>
             <div class="gold-bar"></div>
         </div>
-        <div class="preloader-text">Aurion Club</div>
+        <div class="preloader-text">AURION CLUB</div>
     </div>
 
     <!-- Header -->
     <header class="header">
         <nav class="nav container">
             <div class="nav__logo">
-                <img src="https://files.catbox.moe/3o41t1.png" alt="Aurion Finance" class="logo">
-                <div class="logo__text">Aurion Club</div>
+                <img src="https://files.catbox.moe/3o41t1.png" alt="AURION CLUB" class="logo">
+                <div class="logo__text">AURION CLUB</div>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -2193,7 +2193,7 @@
                         – Where Blockchain Meets Sustainable Growth
                     </h1>
                     <p class="hero__description">
-                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses — designed to empower investors with security, clarity, and passive income stability
+                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses – designed to empower investors with security, clarity, and passive income stability
                     </p>
                     <div class="hero__buttons">
                         <button class="btn btn--primary" data-section="invest">
@@ -2599,7 +2599,7 @@
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title">Whitepaper</h2>
-                    <p class="section__subtitle">Aurion Club — Where Blockchain Meets Sustainable Growth</p>
+                    <p class="section__subtitle">Aurion Club – Where Blockchain Meets Sustainable Growth</p>
                 </div>
 
                 <div class="whitepaper-container">
@@ -2607,7 +2607,7 @@
                         <div class="whitepaper-chapter">
                             <h3 class="chapter-title"><i class="fas fa-book"></i> 1. Introduction</h3>
                             <div class="chapter-content">
-                                <p>Aurion represents a new standard in decentralized financial ecosystems — a fully automated, transparent, and immutable smart contract investment protocol built on blockchain technology.</p>
+                                <p>Aurion represents a new standard in decentralized financial ecosystems – a fully automated, transparent, and immutable smart contract investment protocol built on blockchain technology.</p>
                                 <p>It empowers global investors to earn stable daily returns through an on-chain fixed ROI system, supported by a multi-tier referral network and strict contract-level governance to ensure fairness, security, and sustainability.</p>
                                 <p>The Aurion contract operates entirely on-chain, requiring no central administration or manual control over user funds. All transactions, including deposits, ROI calculations, and withdrawals, are executed automatically through immutable smart contract logic.</p>
                             </div>
@@ -2617,7 +2617,7 @@
                             <h3 class="chapter-title"><i class="fas fa-lightbulb"></i> 2. Core Concept</h3>
                             <div class="chapter-content">
                                 <p>Aurion enables investors to stake USDT (BEP20) tokens into predefined investment plans with fixed daily ROI percentages.</p>
-                                <p>Each plan offers different profitability levels, durations, and earning caps — allowing users to choose the model that best fits their capital and risk appetite.</p>
+                                <p>Each plan offers different profitability levels, durations, and earning caps – allowing users to choose the model that best fits their capital and risk appetite.</p>
                                 <p>The system also rewards community expansion through a multi-level referral program, ensuring continuous ecosystem growth while maintaining on-chain transparency and performance.</p>
                             </div>
                         </div>
@@ -3087,7 +3087,7 @@
                         <span>Aurion Club</span>
                     </div>
                     <p class="footer__description">
-                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses — designed to empower investors with security, clarity, and passive income stability
+                        Experience decentralized wealth creation through verified smart contracts, fixed ROI plans, and tiered referral bonuses – designed to empower investors with security, clarity, and passive income stability
                     </p>
                     <div class="footer__social">
                         <a href="https://t.me/AurionClub" class="social__link">
