--- a/index.html
+++ b/index.html
@@ -2161,6 +2161,9 @@
                         <a class="nav__link" data-section="audit">Audit Report</a>
                     </li>
                     <li class="nav__item">
+                        <a class="nav__link" data-section="downloads">Downloads</a>
+                    </li>
+                    <li class="nav__item">
                         <a class="nav__link" data-section="faq">FAQ</a>
                     </li>
                 </ul>
@@ -2984,6 +2987,73 @@
             </div>
         </section>
 
+        <!-- PDF Downloads Section -->
+        <section class="resources-section section" id="downloads" style="display: none;">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">Official Documents</h2>
+                    <p class="section__subtitle">Download the Aurion Club whitepaper in your preferred language.</p>
+                </div>
+                <div class="resources-grid">
+                    <!-- English PDF Card -->
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Aurion Club (English)</h3>
+                        <p>The official document detailing the project's vision, technology, and investment plans in English.</p>
+                        <a href="https://www.dropbox.com/scl/fi/dk31agk6l6ng8npot43vd/AurionClubEanglish.pdf?rlkey=mv5x1bu0t4lm1g3k2lwe42tfr&st=pw8nrt4p&dl=1" class="btn btn--primary" download>
+                            <i class="fas fa-download"></i> Download PDF
+                        </a>
+                    </div>
+                    <!-- French PDF Card -->
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Aurion Club (French)</h3>
+                        <p>The official document detailing the project's vision, technology, and investment plans in French.</p>
+                        <a href="https://www.dropbox.com/scl/fi/3483we2ufcj5hc4hq9sm9/AurionClubFrench.pdf?rlkey=vo23trsrwfclpn88fayllwdtw&st=nob3df9c&dl=1" class="btn btn--primary" download>
+                            <i class="fas fa-download"></i> Download PDF
+                        </a>
+                    </div>
+                    <!-- Hindi PDF Card -->
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Aurion Club (Hindi)</h3>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Hindi.</p>
+                        <a href="https://www.dropbox.com/scl/fi/y6g7gxz5qed0kyec7fdz2/AurionClubHindi.pdf?rlkey=mrva7w8ctemau2lo5dnhzv5ad&st=wtc78za0&dl=1" class="btn btn--primary" download>
+                            <i class="fas fa-download"></i> Download PDF
+                        </a>
+                    </div>
+                    <!-- Portuguese PDF Card -->
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Aurion Club (Portuguese)</h3>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Portuguese.</p>
+                        <a href="https://www.dropbox.com/scl/fi/occhss2513487br8zn07w/AurionClubPortuguese.pdf?rlkey=ha7pj8j45m581vnrsiu247vfc&st=pcb757sz&dl=1" class="btn btn--primary" download>
+                            <i class="fas fa-download"></i> Download PDF
+                        </a>
+                    </div>
+                    <!-- Spanish PDF Card -->
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Aurion Club (Spanish)</h3>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Spanish.</p>
+                        <a href="https://www.dropbox.com/scl/fi/0wo44jkjx3hl8ftts6ode/AurionClubSpanish.pdf?rlkey=dmtf2u2e5tcafzeggpx6bi9ed&st=1c6iomy4&dl=1" class="btn btn--primary" download>
+                            <i class="fas fa-download"></i> Download PDF
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- FAQ Section -->
         <section class="faq-section section" id="faq" style="display: none;">
             <div class="container">
@@ -3113,6 +3183,7 @@
                         <h4>Resources</h4>
                         <a class="footer-link" data-section="whitepaper">Whitepaper</a>
                         <a class="footer-link" data-section="audit">Audit Report</a>
+                        <a class="footer-link" data-section="downloads">Downloads</a>
                         <a class="footer-link" data-section="faq">FAQ</a>
                     </div>
                     <div class="footer__column">
@@ -3174,6 +3245,7 @@
             referral: document.getElementById('referral'),
             whitepaper: document.getElementById('whitepaper'),
             audit: document.getElementById('audit'),
+            downloads: document.getElementById('downloads'),
             faq: document.getElementById('faq')
         };
 
